--- a/src/components/color-list/styles.scss
+++ b/src/components/color-list/styles.scss
@@ -5,6 +5,11 @@
     flex: 1;
     overflow: hidden;
 
+    @media (max-width: 680px) { 
+        width: 100%;
+    }
+
+
     &__container {
         display: flex;
         flex-wrap: wrap;
@@ -16,6 +21,13 @@
 
     &__GridDropZone {
         width: 100%;
+        height: 403px;
+
+        
+        @media (max-width: 680px) { 
+            height: 180px;
+        }
+
     }
 
     &__add {
