--- a/src/components/color-picker-panel/styles.scss
+++ b/src/components/color-picker-panel/styles.scss
@@ -1,6 +1,10 @@
 .color-picker-panel {
     width: 310px;
 
+    @media (max-width: 680px) { 
+        width: 100%;
+    }
+
     &__fields {
         display: flex;
         flex-direction: column;
